# cchatroom

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  readme.md
client/: client.c
common/: command.h  control.c  control.h  packet.c  packet.h  shared.h
server/: server.c
